<resources>
    <string name="app_name">Shopify</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="validdetails">Registeration Successful</string>
    <string name="progressbar">Please wait</string>
    <string name="emptypassword">Please Enter Password</string>
    <string name="emptyemail">Please Enter Email</string>
    <string name="loginsuccess">You are logged in successfully</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="emptyemailfp">Please Enter Email</string>
    <string name="resetemailfp">Password reset email sent</string>
    <string name="successfulregistered">Registeration Successful</string>
    <string name="plzwait">Please wait</string>
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="storagepermissiondenied">Storage Permission Denied</string>
    <string name="emptymobileno">Enter Mobile Number</string>
    <string name="profileupdatedsuccessfully">Profile updated successsfully</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="title_home">Home</string>
    <string name="title_products">Products</string>
    <string name="title_orders">Orders</string>
    <!--END-->

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="appname">Shopify</string>
    <string name="titleactivitydashboard">This is dashboard Fragment</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="action_settings">Settings</string>
    <string name="completeprofile">Complete Profile</string>
    <string name="editprofile">Edit Profile</string>
    <string name="addproducts">Add Product</string>
    <string name="et_hint_product_title">Product Title</string>
    <string name="et_hint_product_price">Product Price (₹)</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_quantity">Product Quantity</string>
    <string name="emptyProductImage">Please select product image</string>
    <string name="emptyproducttitle">Product title cannot be empty</string>
    <string name="productdescriptionempty">Product description cannot be empty</string>
    <string name="emptyproductquantity">Product quantity cannot be empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noproductaddedyet">No Products Added Yet</string>
    <string name="nodashboarditemfound">No Dashboard Item Found</string>
    <string name="productcouldnotbedeleted">Product could not be deleted.Please try again.</string>
    <string name="productdeletesuccess">Product deleted successfully</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="Yes">Yes</string>
    <string name="btn_lbl_add_to_cart">ADD TO CART</string>
    <string name="No">No</string>
    <string name="btn_lbl_go_to_cart">GO TO CART</string>
    <string name="product_details_title">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="itemaddedtocart">Item added to cart</string>
    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="lbl_out_of_stock">Product Out Of Stock</string>
    <string name="cannotaddmore">Cannot add more due to unavailability</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Address</string>
    <string name="title_address_list">ADDRESS LIST</string>
    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>
    <string name="addressdeleted">Your address was deleted successfully</string>
    <string name="emptyaddress">Please enter valid address</string>
    <string name="emptyzipcode">Please enter zip code</string>
    <string name="addressadded">Address Added Successfully</string>
    <string name="editaddress">Edit Address</string>
    <string name="noorder">No order placed yet</string>
    <string name="updateaddress">Update Address</string>
    <string name="addressupdated">Your address updated successfully</string>
    <string name="addressaddedsuccess">Your address added successfully</string>
    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address.</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip-code.</string>
    <string name="err_msg_please_enter_other_details">Please enter other details.</string>

    <string name="err_your_address_added_successfully">Your address is added successfully.</string>

    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="msg_your_address_updated_successfully">Your address is updated successfully.</string>

    <string name="err_your_address_deleted_successfully">Your address is deleted successfully.</string>
    <string name="title_select_address">SELECT ADDRESS</string>

    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>
    <string name="orderstatusinprocess">In Process</string>
    <string name="orderstatusdelivered">Delivered</string>
    <!--END-->

</resources>