<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
  <FrameLayout
    android:id="@+id/fl_header_image"
      android:layout_width="wrap_content"
      android:layout_height="@dimen/auth_header_image_height"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
      android:background="@drawable/auth_screens_background"
      android:orientation="horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:src="@drawable/both"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </ImageView>

  </FrameLayout>
  <com.dadadedicatedfirst.shopifyy.utils.MSPTextViewBold
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
    android:layout_marginTop="35dp"
    android:textColor="@color/colorPrimaryText"
    android:text="Login"
      android:id="@+id/tv_title"
      android:textSize="@dimen/title_textSize"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/fl_header_image"
    />
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/til_email"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="35dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/et_hint_email_id"
    android:textColorHint="@color/colorSecondaryText"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_title">

    <com.dadadedicatedfirst.shopifyy.utils.customedittext
      android:id="@+id/usr_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:padding="@dimen/et_padding"
      android:textColor="@color/colorPrimaryText"
      android:textSize="@dimen/et_textSize"
      tools:text="abc@gmail.com"/>
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_password"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="16dp"
      android:hint="@string/et_hint_password"
      android:textColorHint="@color/colorSecondaryText"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/til_email">
    <com.dadadedicatedfirst.shopifyy.utils.customedittext
      android:id="@+id/usr_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:padding="@dimen/et_padding"
      android:textColor="@color/colorPrimaryText"
      android:textSize="@dimen/et_textSize"
      tools:text="123456"
      />

  </com.google.android.material.textfield.TextInputLayout>
  <com.dadadedicatedfirst.shopifyy.utils.customtextview
    android:id="@+id/tv_forgot_password"
    android:layout_marginEnd="16dp"
    android:text="@string/lbl_forgot_password"
    android:textColor="@color/colorSecondaryText"
      android:foreground="?attr/selectableItemBackground"
    android:textSize="@dimen/forgot_password_textSize"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/til_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <com.dadadedicatedfirst.shopifyy.utils.custombutton
    android:id="@+id/btn_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="30dp"
    android:background="@drawable/button_background"
    android:foreground="?attr/selectableItemBackground"
    android:gravity="center"
    android:paddingTop="@dimen/btn_padding"
    android:paddingBottom="@dimen/btn_padding"
    android:text="@string/btn_lbl_login"
    android:textColor="@android:color/white"
    android:textSize="@dimen/btn_textSize"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"/>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btn_login">

    <com.dadadedicatedfirst.shopifyy.utils.customtextview
      android:id="@+id/no_account"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
        android:foreground="?attr/selectableItemBackground"
      android:text="@string/don_t_have_an_account"
      android:padding="@dimen/clickable_text_view_padding"
      android:textColor="@color/colorSecondaryText"
      android:textSize="@dimen/lbl_text_view_textSize"/>

    <com.dadadedicatedfirst.shopifyy.utils.MSPTextViewBold
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/clickable_text_view_padding"
        android:text="@string/register"
        android:textColor="@color/colorSecondaryText"
        android:textSize="15sp" />

  </LinearLayout>


  
  

  </androidx.constraintlayout.widget.ConstraintLayout>