<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">
    <FrameLayout
        android:id="@+id/fl_header_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/auth_header_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/auth_screens_background"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="217dp"
            android:src="@drawable/both"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </ImageView>
    </FrameLayout>
    <com.dadadedicatedfirst.shopifyy.utils.MSPTextViewBold
        android:id="@+id/fptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_header_image"
        android:layout_marginTop="35dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/forgot_password_title_textSize"/>
    <com.dadadedicatedfirst.shopifyy.utils.customtextview
        android:id="@+id/fpdescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_title_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fptitle"
        android:layout_marginTop="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryText"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fpdescription"
        android:hint="@string/et_hint_email_id"
        android:textColorHint="@color/colorSecondaryText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        >

        <com.dadadedicatedfirst.shopifyy.utils.customedittext
            android:id="@+id/fpemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.dadadedicatedfirst.shopifyy.utils.custombutton
        android:id="@+id/fpsubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/btn_lbl_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_textSize"
        />

</androidx.constraintlayout.widget.ConstraintLayout>