<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/Theme.MaterialComponents.DayNight"
    android:layout_height="match_parent"
    tools:context=".UserProfile">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/userprofileactivitytoolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/appgradientcolorbackground"
        >

        <com.dadadedicatedfirst.shopifyy.utils.MSPTextViewBold
            android:id="@+id/titleprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_complete_profile"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/toolbar_title_text_size"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userprofileactivitytoolbar"
        android:scrollbars="none">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="@dimen/profile_user_image_size"
                android:layout_height="@dimen/profile_user_image_size"
                android:id="@+id/fluserimage"
                android:layout_marginTop="@dimen/profile_user_image_marginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <ImageView
                    android:id="@+id/ivuser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/profile_user_photo_margin"
                    android:background="@color/colorLightGrey"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_user_placeholder"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/user_image_background"/>

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/tilfnup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/fluserimage"
                android:hint="@string/hint_first_name"
                android:textColorHint="@color/colorSecondaryText">

                <com.dadadedicatedfirst.shopifyy.utils.customedittext
                    android:id="@+id/etfnup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/tillnup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tilfnup"
                android:hint="@string/hint_last_name"
                android:textColorHint="@color/colorSecondaryText">

                <com.dadadedicatedfirst.shopifyy.utils.customedittext
                    android:id="@+id/etlnup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilemailup"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_email_id"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tillnup">

                <com.dadadedicatedfirst.shopifyy.utils.customedittext
                    android:id="@+id/etemailup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilmobilenumberup"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_mobile_number"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilemailup">

                <com.dadadedicatedfirst.shopifyy.utils.customedittext
                    android:id="@+id/etmobilenumberup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize" />
            </com.google.android.material.textfield.TextInputLayout>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_radio_button_height"
                android:id="@+id/rb"
                app:layout_constraintBottom_toTopOf="@+id/submitup"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tilmobilenumberup"
                >

                <com.dadadedicatedfirst.shopifyy.utils.customradiobutton
                    android:id="@+id/rbmale"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/profile_radio_button_marginStartEnd"
                    android:layout_weight="1"
                    android:background="@drawable/gendertabselector"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/rb_lbl_male"
                    android:textColor="@drawable/gendertextselector"
                    android:textStyle="bold"/>
                <com.dadadedicatedfirst.shopifyy.utils.customradiobutton
                    android:id="@+id/rbfemale"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/profile_radio_button_marginStartEnd"
                    android:layout_weight="1"
                    android:background="@drawable/gendertabselector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/rb_lbl_female"
                    android:textColor="@drawable/gendertextselector"
                    android:textStyle="bold"/>

            </RadioGroup>
            <com.dadadedicatedfirst.shopifyy.utils.custombutton
                android:id="@+id/submitup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_lbl_save"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_textSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rb" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>